--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,19 +2,19 @@
   <div class="left">
     {% if paginator.previous_page %}
       {% if paginator.page == 2 %}
-        <a class="pagination-item" href="{{ site.baseurl }}/">{{ site.text.pagination.newer }}</a>
+        <a class="pagination-item" href="{{ site.baseurl }}/">{{ site.data.text.pagination.newer }}</a>
       {% else %}
-        <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.previous_page}}/">{{ site.text.pagination.newer }}</a>
+        <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.previous_page}}/">{{ site.data.text.pagination.newer }}</a>
       {% endif %}
     {% else %}
-      <span class="pagination-item disabled">{{ site.text.pagination.newer }}</span>
+      <span class="pagination-item disabled">{{ site.data.text.pagination.newer }}</span>
     {% endif %}
   </div>
   <div class="right">
     {% if paginator.next_page %}
-      <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.next_page}}/">{{ site.text.pagination.older }}</a>
+      <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.next_page}}/">{{ site.data.text.pagination.older }}</a>
     {% else %}
-      <span class="pagination-item disabled">{{ site.text.pagination.older }}</span>
+      <span class="pagination-item disabled">{{ site.data.text.pagination.older }}</span>
     {% endif %}
   </div>
 </div>
