--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,13 +11,13 @@ layout: default
   <h1>{{ page.title }}</h1>
   <span class="post-meta">{{ page.date | date: site.date_format }}</span><br>
   {% if page.update_date %}
-    <span class="post-meta">{{ site.text.post.updated }}: {{ page.update_date | date: site.date_format }}</span><br>
+    <span class="post-meta">{{ site.data.text.post.updated }}: {{ page.update_date | date: site.date_format }}</span><br>
   {% endif %}
   <span class="post-meta small">
   {% if page.minutes %}
-    {{ page.minutes }} {{ site.text.post.minute_read }}
+    {{ page.minutes }} {{ site.data.text.post.minute_read }}
   {% else %}
-    {{ minutes }} {{ site.text.post.minute_read }}
+    {{ minutes }} {{ site.data.text.post.minute_read }}
   {% endif %}
   </span>
 </div>
@@ -55,7 +55,7 @@ layout: default
 {% endif %}
 
 {% if site.show_related_posts %}
-  <h3 class="related-post-title">{{ site.text.post.related_posts }}</h3>
+  <h3 class="related-post-title">{{ site.data.text.post.related_posts }}</h3>
   {% for post in site.related_posts %}
     <div class="post ml2">
       <a href="{{ post.url | prepend: site.baseurl }}" class="post-link">
